k8s/09-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practica-frontend
  namespace: devops-lab
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: practica-frontend
  template:
    metadata:
      labels:
        app: practica-frontend
    spec:
      containers:
        - name: frontend
          image: practica-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80  # <-- CAMBIAR A 80
          readinessProbe:
            httpGet:
              path: /
              port: 80  # <-- CAMBIAR A 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80  # <-- CAMBIAR A 80
            initialDelaySeconds: 15
            periodSeconds: 10
