k8s/08-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: practica-backend
  namespace: devops-lab
spec:
  selector:
    app: practica-backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
  type: ClusterIP
