k8s/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practica-ingress
  namespace: devops-lab
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: practica-backend
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: practica-frontend
            port:
              number: 80
